[SR-3174] Ignore local variables in selector